--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,6 @@
             <artifactId>picocli</artifactId>
             <version>4.7.5</version>
         </dependency>
-    </dependencies>
+    </dependencies>git 
 
 </project>
